2010-11-05  Ramon Novoa  <rnovoa@artica.es>

	* installer/pandora.mpi: Updated installation messages.

	* pandora_windows_service.cc: startup_delay after the service is
	  started, not before. Read all secondary server parameters.

2010-11-03  Ramon Novoa  <rnovoa@artica.es>

	* bin/util/tentacle_client.exe: Updated the tentacle client.

2010-10-27  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_logevent.cc: We need more information on error
	  997, ignore it for now.

2010-10-04  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.cc: Fixed inventory NIC information.

2010-10-04  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_inventory.cc: Fixed XML generation for
	  inventory modules.

2010-08-04  Ramon Novoa  <rnovoa@artica.es>

	* Makefile.am: Use -static-libstdc++ to remove the dependency on
	  libstdc++-6.dll.

2010-08-04  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.cc: Free the collection if it can not
	  be added to the list.

	* Makefile.am: Use -static-libgcc to remove the dependency on
	  libgcc_s_sjlj-1.dll.

2010-08-04  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.cc: Run action commands through cmd.exe.

2010-08-04  Sancho Lerena <slerena@artica.es>

	* win32/bin/util/df_percent.vbs: New VBS plugin to detect all
	hardrives and return free disk on %.

2010-08-04  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.cc: Run action commands through cmd.exe.

2010-08-04  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.cc: Changed sscanf format strings. They did
	  not seem to work well in native Windows.

2010-07-16  Dario Rodriguez <dario.rodriguez@artica.es>

	* misc/pandora_file.cc: fixed unclosed directory with function closedir.

2010-07-16  Dario Rodriguez <dario.rodriguez@artica.es>

	* misc/pandora_file.cc, pandora_file.h: Added function to remove directories
	recursively

        * win32/pandora_windows_service.cc, pandora_windows_service.h: Added